examples/type_system/failing/109_fun_return_bool_vs_unit.flx
fn bad_bool() -> Bool {
    0
}

fn main() -> Unit {
    bad_bool()
}
